added background colour

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+  <style>
+    body{
+ background-color: blue;
+}
+  </style>
 </head>
 <body>
  <div> <h1>VERSATILE COLLEGE</h1></div>
